fixed small layout issue in admin

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -56,8 +56,8 @@ table > tbody > tr > td {
 table {
   border: 0;
 }
-.field-box label {
-  padding: 2px 0 !important;
+.field-box ul {
+  padding-left: 38px !important;
 }
 .addlink, .changelink {
     padding-left: 20px;
